--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="shortcut icon" href="./public/stopwatch.svg" type="image/x-icon">
+
   <script src="./source/index.js" type="module" defer></script>
   <title>Focus Timer - Dark Mode</title>
 </head>
