--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="shortcut icon" href="./public/favicon.png" type="image/x-icon">
 
   <script src="./source/index.js" type="module" defer></script>
   <title>Focus Timer - Dark Mode</title>
